--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Frontend Mentor | Interactive pricing component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Simple, traffic-based pricing
-  Sign-up for our 30-day trial. No credit card required. 
+  <input type="range" min="1" max="100" value="90" class="slider" id="CustomSlider" />
+  <div class="bg-pattern"></div>
+  <header>
+    <h1 class="header__title">Simple, traffic-based pricing</h1>
+    <p class="header__subtitle">Sign-up for our 30-day trial. No credit card required. </p>
+  </header>
+  <article class="pricing-component">
+    
+  </article>
+  
 
   Pageviews
   $ /month
@@ -31,9 +36,10 @@
 
   Start my trial
   
+  <script src="./js/script.js"></script>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Mohamed Farid</a>.
   </div>
 </body>
 </html>
