--- a/index.html
+++ b/index.html
@@ -1,45 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Frontend Mentor | Interactive pricing component</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Frontend Mentor | Interactive pricing component | Mohamed Farid</title>
+  </head>
+  <body>
+    <img src="./design/desktop-design.jpg" alt="" class="design" />
+    <div class="bg-pattern">
+      <svg xmlns="http://www.w3.org/2000/svg" width="146" height="145">
+        <g fill="none" fill-rule="evenodd" stroke="#CFD8EF">
+          <circle cx="63" cy="82" r="62.5" />
+          <circle cx="105" cy="41" r="40.5" />
+        </g>
+      </svg>
+    </div>
+    <div class="wrapper">
+      <header>
+        <h1 class="header__title">Simple, traffic-based pricing</h1>
+        <p class="header__subtitle">Sign-up for our 30-day trial. No credit card required.</p>
+      </header>
+      <article class="pricing-component">
+        <div class="pricing-component__header">
+          <p>100K pageviews</p>
+          <p>
+            <span class="pricing-component__price">$16.00 </span>
+            /month
+          </p>
+        </div>
+        <div class="pricing-component__controllers">
+          <div class="">
+            <input
+              type="range"
+              min="1"
+              max="100"
+              value="50"
+              class="slider CustomSlider"
+              id="price-range"
+            />
+          </div>
+          <div class="">
+            <div class="billing-mode">
+              <p>Monthly Billing</p>
+              <label class="toggle">
+                <input type="checkbox" />
+                <div class="toggle_shape"></div>
+              </label>
+              <p>Yearly Billing</p>
+            </div>
+            <span class="discount-badge">25% discount </span>
+          </div>
+        </div>
 
-</head>
-<body>
+        <div class="pricing-component__footer">
+          <ul class="pricing__features">
+            <li>Unlimited websites</li>
+            <li>100% data ownership</li>
+            <li>Email reports</li>
+          </ul>
 
-  <input type="range" min="1" max="100" value="90" class="slider" id="CustomSlider" />
-  <div class="bg-pattern"></div>
-  <header>
-    <h1 class="header__title">Simple, traffic-based pricing</h1>
-    <p class="header__subtitle">Sign-up for our 30-day trial. No credit card required. </p>
-  </header>
-  <article class="pricing-component">
-    
-  </article>
-  
+          <button class="pricing-component__start-btn">Start my trial</button>
+        </div>
+      </article>
 
-  Pageviews
-  $ /month
-
-  Monthly Billing
-  Yearly Billing 25% discount
-
-  Unlimited websites
-  100% data ownership
-  Email reports
-
-  Start my trial
-  
-  <script src="./js/script.js"></script>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Mohamed Farid</a>.
-  </div>
-</body>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Mohamed Farid</a>.
+      </div>
+    </div>
+    <script src="./js/script.js"></script>
+  </body>
 </html>
